# Real-Time-Fraud-Detection-System

./: .dockerignore  .gitignore  Dockerfile  README.md  creating_data.py  pyproject.toml  requirements.txt  run_pipeline.py  transactions_2026.csv
app/: __init__.py  explain.py  fraud_detection_model.json  main.py
artifacts/data/: simulated_transactions_seed_42.csv  simulated_transactions_seed_69.csv  simulated_transactions_v42_0.csv  (+2 more)
configs/: config.yaml
data_creation/: data_creation.ipynb  transactions_2026.csv  v1.0_data_creation.ipynb
feature_engineering/: Feature Engineering Script.ipynb  fraud_features_ready.csv  v1.0_feature_engineering.ipynb
model/: model_training_and_evaluation.ipynb  v1.0_model_training_and_evaluation.ipynb
model_deployement/: main.py
notebooks/: EDA.ipynb  _testing_pipeline.ipynb  _testing_scripts.ipynb  data_creation_v1.0_.ipynb  feature_engineering_v1.ipynb  feature_engineering_v:1.0_.ipynb  model_training_and_evaluation.ipynb  model_training_and_evaluation_v1..ipynb  model_training_and_evaluation_v1.ipynb  model_training_and_evaluation_v:1.0_.ipynb  pipeline.ipynb  v1.0_data_creation.ipynb  v1.0_feature_engineering.ipynb  v1.0_model_training_and_evaluation.ipynb
reports/: drift_report_20260129_210644.html  drift_report_20260129_210700.html  drift_report_20260201_071922.html
src/: config.yaml  data_ingestion.py  drift_monitoring.py  drift_monitoring_.py  feature_engineering.py  model_training.py  monitor.py  monitoring.py  threshold_optimization.py
src/api/: main.py
tests/: test_fraud_model.py
web_app/: streamlit_app.py
(+25 files in other folders)
