[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fraud_detection"
version = "0.1.0"

# Add dependencies here instead of a separate requirements.txt

dependencies = [
    "faker>=10.2.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "xgboost>=2.0.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "shap>=0.44.0",
    "pydantic>=2.7.0",
    "evidently>=0.4.36,<0.5.0",
    "matplotlib>=3.8.0",
    "ipykernel >= 6.28.0",
]

[project.optional-dependencies]

dev = [
    "pytest>=7.4.0",
    "black",     # Good for code formatting
    "isort",     # Good for sorting imports
]

[tool.setuptools.packages.find]

where = ["src"]  # Tells it to look in the root
include = ["*"]  # Find the folder that is starting with src and everything inside it
